Changes: Updating credits with Polish guys.
RevBy: TrustMe

--- a/doc/src/credits.dox
+++ b/doc/src/credits.dox
@@ -39,6 +39,8 @@ The following people have contributed code to DirectUI or otherwise helped out. 
  James Cook
  Jarno Santeri Luoma-Nirva
  Mohammad Anwari
+ Maciej Jabłoński
+ Marcin Miklas
  Marius Vollmer
  Marko A. Mattila 
  Martin Scherbaum 
