Changes: DuiWindow's signals exitedDisplay() and enteredDisplay renamed to displayExited() and displayEntered(). Two unused deprecated methods removed.
RevBy: Jussi Lind, Antti Kervinen

Details: DuiWidget already has this renaming done.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,4 +1,11 @@
 /*! \page news What's New in DirectUI
+\section v0200
+
+\subsection New
+
+- DuiWindow's visibility signals enteredDisplay() and exitedDisplay() renamed to be
+  displayEntered() and displayExited() 
+
 \section v0190
 
 \subsection New
