Changes: DuiPopupList API cleanup.
RevBy: Daniel d'Andrada
Details: Removed depracated and obsolete methods, properties and signals.
         itemModel and selectionModel is now kept in DuiPopupListModel
         - so no more data passing via signals from controller to view.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -4,9 +4,11 @@
 \subsection New
 
 - DuiWindow's visibility signals enteredDisplay() and exitedDisplay() renamed to be
-  displayEntered() and displayExited() 
+  displayEntered() and displayExited()
 
 - DuiComboBox's  down property removed.
+
+- Removed DuiPopupList's property batchSize and signals: itemModelChanged, selectionModelChanged.
 
 
 \section v0190
