Changes: QGraphicsWidget instead of DuiWidget for the centralWidget properties
RevBy: Daniel d'Andrada
Details:
DuiApplicationPage, DuiContainer, DuiContainerModel, DuiDialog,
DuiDialogModel: centralWidget property type changed to QGraphicsWidget.

DuiExtensionAreaModel: DataStoreMap type changed
to QMap<QGraphicsWidget *, DuiDataStore *>.

Updated unittest, widgetsgallery and duiapplicationextensiontester.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -54,6 +54,8 @@
 
 - DuiWindow::isOnDisplay() and DuiWidget::isOnDisplay() are no longer virtual. Those
   methods shouldn't be overridden.
+- DuiApplicationPage, DuiContainer, DuiContainerModel, DuiDialog, DuiDialogModel: centralWidget property type changed to QGraphicsWidget.
+- DuiExtensionAreaModel: DataStoreMap type changed to QMap<QGraphicsWidget *, DuiDataStore *>.
 
 \section v0190
 
