--- a/doc/src/credits.dox
+++ b/doc/src/credits.dox
@@ -52,6 +52,7 @@ The following people have contributed code to DirectUI or otherwise helped out. 
  Patrick Spendrin 
  Pavan Patale 
  Pekka Vuorela
+ Stefan Hundhammer
  Steffen Imhof
  Tapani Pälli 
  Tero Tiittanen 
