Changes: DuiApplicationPage's title property moved to its model class.
RevBy: Daniel d'Andrada
Details:
Title moved from DuiApplicationPagePrivate to DuiApplicationPageModel

DuiApplicationPage::pageTitleChanged signal removed.
title change is handled in DuiApplicationWindowPrivate::_q_handlePageModifications
slot _q_pageTitleChanged removed.

Unit tests updated.
Removed unused escapeButtonMode member.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -31,6 +31,8 @@
 - escapeButtonMode() property was removed from DuiApplicationPage. Use escapeMode() instead.
 - DuiDialog::windowModal() was renamed to DuiDialog::systemModal().
 
+- DuiApplicationPage::pageTitleChanged(DuiApplicationPage *, const QString &title) signal was removed.
+
 \section v0190
 
 \subsection New
