Changes: Updated news.dox with information on DuiDialog::systemModal() change
RevBy: TrustMe

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -29,6 +29,7 @@
 
 \subsection removed Removed or Renamed
 - escapeButtonMode() property was removed from DuiApplicationPage. Use escapeMode() instead.
+- DuiDialog::windowModal() was renamed to DuiDialog::systemModal().
 
 \section v0190
 
