--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -50,6 +50,7 @@
   DuiSceneManager::hideWindowNow() was renamed to DuiSceneManager::disappearSceneWindowNow(),
   DuiSceneManager::closeWindow() was renamed to DuiSceneManager::dismissSceneWindow(),
   DuiSceneManager::closeWindowNow() was renamed to DuiSceneManager::dismissSceneWindowNow()
+- DuiWindow::keepCurrentOrientation property was removed
 
 - DuiWindow::isOnDisplay() and DuiWidget::isOnDisplay() are no longer virtual. Those
   methods shouldn't be overridden.
