Changes: Removed DuiWidget::visibilityChanged(bool visibility) RevBy: Daniel d'Andrada
Details:
It duplicated functionality already provided by
QGraphicsObject::visibleChanged()

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -56,6 +56,7 @@
   methods shouldn't be overridden.
 - DuiApplicationPage, DuiContainer, DuiContainerModel, DuiDialog, DuiDialogModel: centralWidget property type changed to QGraphicsWidget.
 - DuiExtensionAreaModel: DataStoreMap type changed to QMap<QGraphicsWidget *, DuiDataStore *>.
+- DuiWidget::visibilityChanged(bool visibility) signal removed, use QGraphicsWidget::visibleChanged() instead.
 
 \section v0190
 
