Changes: Remove appearNow(), disappearNow() and dismissNow() from DuiSceneWindow API.
RevBy: Daniel d'Andrada
Details: From now on, to appear/disappear/dismiss a scene window without
animations one would have to use DuiSceneManager's API:
DuiSceneManager::appearSceneWindowNow()
DuiSceneManager::disappearSceneWindowNow()
DuiSceneManager::dismissSceneWindowNow()

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -111,6 +111,8 @@
   - ...
   Use the supplied libdui/tools/migration-scripts/migrate_duiappletmessagetype 
   script for automatic replacement.
+- DuiSceneWindow::appearNow(), DuiSceneWindow::disappearNow(), DuiSceneWindow::dismissNow() -
+  use DuiSceneManager API to forcibly have scene window transitions without animations.
 
 \section v0190
 
