--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,7 @@
 libdui (0.20.0~1) unstable; urgency=low
 
   * New version [UNRELEASED]
-  * remove the following deprecated methods of DuiLocale: installCategoryCatalog(),
-    removeCategoryCatalog(), hasCategoryCatalog(), loadTrCatalogs(),
-    insertTrToQCoreApp(), removeTrFromQCoreApp().
-  * remove support for unneeded gconf keys from DuiLocale
+  * Fixes: NB#158420 - Bottom toolbar shown with hidden actions in portrait mode
 
  -- Tomas Junnonen <tomas.junnonen@nokia.com>  Fri, 19 Mar 2010 11:20:34 +0200
 
