Changes: remove deprecated functions from DuiLocale
RevBy: Torsten Rahn

Details:

deprecated since 0.18:
    void installCategoryCatalog(Category category, const QString &name);
    void removeCategoryCatalog(Category category, const QString &name);
    bool hasCategoryCatalog(Category category, const QString &name);
these are not needed anymore.

deprecated since 0.19.4-2
    void loadTrCatalogs();
    void insertTrToQCoreApp();
    void removeTrFromQCoreApp();
these have been moved into the private class.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -36,6 +36,15 @@
     - DuiWidget::swipeGestureEvent()
 
 \subsection removed Removed or Renamed
+- removed void installCategoryCatalog(Category category, const QString &name);
+  (was deprecated since 0.18)
+- removed void removeCategoryCatalog(Category category, const QString &name);
+  (was deprecated since 0.18)
+- removed bool hasCategoryCatalog(Category category, const QString &name);
+  (was deprecated since 0.18)
+- removed void loadTrCatalogs(); (was deprecated since 0.19.4-2)
+- removed void insertTrToQCoreApp(); (was deprecated since 0.19.4-2)
+- removed void removeTrFromQCoreApp(); (was deprecated since 0.19.4-2)
 - removed support for unneeded gconf keys from DuiLocale.
   The keys /Dui/i18n/Country, /Dui/i18n/Script, and /Dui/i18n/Variant
   were never really used in DuiLocale.  These don’t make sense as
